@startuml
skinparam classAttributeIconSize 0

package ua.khpi.oop.lab01 {

    class Driver {
        - fullName: String
        - experienceYears: int
        + Driver(fullName: String, experienceYears: int)
        + toString(): String
        + equals(obj: Object): boolean
        + hashCode(): int
    }

    class Bus {
        - licensePlate: String
        - capacity: int
        + Bus(licensePlate: String, capacity: int)
        + toString(): String
    }

    class Route {
        - routeNumber: String
        - destination: String
        - bus: Bus
        - driver: Driver
        + Route(routeNumber: String, destination: String, bus: Bus, driver: Driver)
        + Route(routeNumber: String, destination: String, bus: Bus)
        + toString(): String
    }

    class Main {
        + {static} main(args: String[]): void
    }

    ' Зв'язки між класами
    Route "1" *-- "1" Bus : використовує >
    Route "1" o-- "1" Driver : обслуговується >
    Main ..> Route : створює об'єкти >

}
@enduml